# Pegasus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Resources.lua  Resources.xml  config.pegasus  config.sparky  log.txt  main.cpp
assets/: test.txt
assets/materials/: basic_material.lua
assets/shaders/: basic_shader.lua
assets/textures/: basic_diffuse_texture.lua  basic_specular_texture.lua  basic_texture.lua
cmake/: FindGLM.cmake  FindJGLEW.cmake  FindSDL2.cmake  FindSDL2_image.cmake
data/shaders/: basic_fragment.glsl  basic_vertex.glsl
include/pegasus/core/: asset.hpp  config_file.hpp  context.hpp  resource.hpp  resource_handle.hpp  resource_manager.hpp  resources.hpp  window.hpp
include/pegasus/graphics/: buffer.hpp  buffer_description.hpp  gl.hpp  shader.hpp  shader_program.hpp  shader_program_factory.hpp  texture.hpp  texture_description.hpp  texture_factory.hpp  uniform.hpp  vertex.hpp
include/pegasus/scripting/: scripting_manager.hpp
include/pegasus/utilities/: console_policy.hpp  factory.hpp  file_policy.hpp  file_reader.hpp  iasset_factory.hpp  ipolicy.hpp  iserializable_service.hpp  logger.hpp  logger_factory.hpp  lua_serializable_service.hpp  non_copyable.hpp  reader.hpp  singleton.hpp  stream_reader.hpp  string_utils.hpp  xml_serializable_service.hpp
include/pegasus/utilities/exceptions/: no_factory_found_exception.hpp  no_resource_exception.hpp  not_implemented_exception.hpp  serialize_exception.hpp
include/sparky/core/: asset.hpp  config_file.hpp  context.hpp  resource_manager.hpp  resources.hpp  window.hpp
include/sparky/scripting/: scripting_manager.hpp
include/sparky/utilities/: console_policy.hpp  factory.hpp  file_policy.hpp  file_reader.hpp  iasset_factory.hpp  ipolicy.hpp  iserializable_service.hpp  logger.hpp  logger_factory.hpp  lua_serializable_service.hpp  non_copyable.hpp  reader.hpp  singleton.hpp  stream_reader.hpp  string_utils.hpp  xml_serializable_service.hpp
include/sparky/utilities/exceptions/: no_factory_found_exception.hpp  no_resource_exception.hpp  not_implemented_exception.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  asset.cpp  config_file.cpp  resource_manager.cpp  resources.cpp  window.cpp
src/graphics/: CMakeLists.txt  buffer.cpp  gl.cpp  shader.cpp  shader_program.cpp  shader_program_factory.cpp  texture.cpp  texture_factory.cpp  uniform.cpp
src/scripting/: CMakeLists.txt  scripting_manager.cpp
src/utilities/: CMakeLists.txt  console_policy.cpp  file_policy.cpp  file_reader.cpp  iasset_factory.cpp  logger.cpp  logger_factory.cpp  lua_serializable_service.cpp  no_factory_found_exception.cpp  no_resource_exception.cpp  reader.cpp  stream_reader.cpp  string_utils.cpp  xml_serializable_service.cpp
src/utilities/exceptions/: no_factory_found_exception.cpp  no_resource_exception.cpp  not_implemented_exception.cpp  serialize_exception.cpp
tests/: test_asset_factory.cpp  test_lua_serializable_service.cpp
